Fiks NullPointerException